Fixed ios issue by removing cover image on ios with background-size: auto

--- a/mobileStyle.css
+++ b/mobileStyle.css
@@ -5,7 +5,7 @@
     }
     
     .background {
-        /* background-size: auto; */
+        background-size: auto;
         background-position-y: 80%;
         height: 100vh; 
     }
